Fix img alignment... again

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -140,7 +140,9 @@ p {
 }
  */
 .error-img {
-    width: 100%;
+    width: 500px;
+    display: block;
+    margin: auto;
     padding-bottom: 10px;
 }
 
